# RAG_test

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/rag_test/: config.py  main.py
src/rag_test/api/: meal_recommender.py  models.py
src/rag_test/db/: db.py  models.py
src/rag_test/recommender/: recommender.py
